fixed spacings and colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,16 @@ button {
 
 .attribution {
     color: var(--light-gray);
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 0.88rem;
 }
 
 .username {
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
+    text-decoration: none;
+    color: inherit;
 }
 
 /* MAIN
@@ -58,6 +62,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+
 }
 
 main {
@@ -70,14 +75,19 @@ main {
 }
 
 section {
-    margin-top: 50px;
+    margin-top: 10%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
+}
+
+p {
+    width: 60%;
 }
 
 img {
-    width: 440px;
+
+    width: 500px;
 }
 
 .text-container {
@@ -86,10 +96,21 @@ img {
 
 button {
     display: block;
+    border: none;
+    padding: 20px 40px;
+    margin-top: 50px;
+}
+
+button:hover {
+    opacity: 90%;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
 footer {
+    margin-top: 50px;
     justify-content: flex-end;
+    text-align: center;
 }
 
 /* RESPONSIVENESS
@@ -102,6 +123,10 @@ footer {
     }
     img {
         width: 70%;
+    }
+
+    p {
+        width: 100%;
     }
 
     .text-container {
